--- a/ITProjekt/src/konfiguration.tex
+++ b/ITProjekt/src/konfiguration.tex
@@ -17,9 +17,9 @@
 %\newcommand{\matrikelnummer}{541608\xspace}
 
 % Arbeitsspezifische Daten
-\newcommand{\project}{\textbf{T:KvJfE}}
+\newcommand{\project}{\textbf{WBS ALARM!} (\textit{Arbeitstitel})}
 \newcommand{\titel}{\project\xspace}
-\newcommand{\untertitel}{IT=Projekt im Rahmen des Studiengangs\xspace}
+\newcommand{\untertitel}{IT-Projekt im Rahmen des Studiengangs\xspace}
 \newcommand{\modulname}{IT-Projekt\xspace}
 \newcommand{\pruefer}{Uwe Werner\xspace}
 \newcommand{\semester}{WiSe 18/19 - SoSe 2020\xspace}
