--- a/ITProjekt/src/inhalt.tex
+++ b/ITProjekt/src/inhalt.tex
@@ -162,6 +162,9 @@ Im Abschnitt der \textit{\textbf{Auswertungen}} können die Anwender*innen eine 
 
 Kann schon geplant werden, wer für welche Aufgabe zuständig ist? Dann eine Tabelle mit der Resourcenplanung erstellen.
 
+
 \subsubsection{Zeitplanung}
 
-Hier noch ein hübsches Gantt Diagramm? Oder einfach textlich auf die Roadmap verweisen?
+Hier noch ein Gantt. Aber in Schön... mal sehen wie das mit ZikZ klappt.
+
+http://texdoc.net/texmf-dist/doc/latex/pgfgantt/pgfgantt.pdf
