Edited the subsection "Über uns"

--- a/ITProjekt/src/inhalt.tex
+++ b/ITProjekt/src/inhalt.tex
@@ -4,7 +4,7 @@ Der Rahmen des Projekts...
 
 \subsection{Unternehmen}
 
-Über uns...
+Wir sind ein junges Unternehmen bestehend aus drei Studenten der Sozialinformatik. Wir setzen uns zusammen aus zwei Softwareentwicklern (Backend- und Frontendentwickler) und einem Netzwerkadministrator. Das unternehmen wurde im Jahr 2018 im Zuge eines IT-Projekts für unser Studium gegründet.
 
 
 \subsection{Projekt}
