new paragraph "Core goals"

--- a/ITProjekt/src/inhalt.tex
+++ b/ITProjekt/src/inhalt.tex
@@ -1,10 +1,18 @@
 \section{Projektinitialisierung}\label{sec:Projektinitialisierung}
 
-Der Rahmen des Projekts... 
+\textit{Was sind unsere Kernziele?}
+
+Unsere Kernziele sind das Schaffen einer Möglichkeit eine Übersicht über die Bestände der Kleidung der Jugendfeuerwehren der Gemeinde Helsa zu bekommen. Diese werden aktuell im Ortsteil Eschenstruth gelagert und verwaltet. Dazu soll eine Web-Applikation geschaffen werden, die einen Überblick, sowie die Möglichkeit einer Ein- und Ausgabemaske für die Kleiderverwaltung der freiwilligen Feuerwehr Helsa Ortsteil Eschenstruth bildet. 
+
+Das Projekt soll möglichst barrierefrei (nach aktuellstem europäischem Standard), sowie mobil bedienbar sein, sodass die Jugendwarte nicht auf einen zusätzlichen Laptop angewiesen sind, sondern das Programm einfach und bequem von ihrem Handy oder Smartphone aus bedienen können. Es soll außerdem unter Verwendung der aktuellsten technischen Standards umgesetzt werden.
+
+\textit{Was sind unsere Erfolgskriterien?}
+
+
 
 \subsection{Unternehmen}
 
-Wir sind ein junges Unternehmen bestehend aus drei Studenten der Sozialinformatik. Wir setzen uns zusammen aus zwei Softwareentwicklern (Backend- und Frontendentwickler) und einem Netzwerkadministrator. Das unternehmen wurde im Jahr 2018 im Zuge eines IT-Projekts für unser Studium gegründet.
+Wir sind ein junges Unternehmen bestehend aus drei Studenten der Sozialinformatik. Wir setzen uns zusammen aus zwei Softwareentwicklern (Backend- und Frontendentwickler) und einem Netzwerkadministrator. Das Unternehmen wurde im Jahr 2018 im Zuge eines IT-Projekts für unser Studium gegründet.
 
 
 \subsection{Projekt}
