--- a/ITProjekt/src/inhalt.tex
+++ b/ITProjekt/src/inhalt.tex
@@ -1,15 +1,5 @@
 \section{Projektinitialisierung}\label{sec:Projektinitialisierung}
 
-\textit{Was sind unsere Kernziele?}
-
-Unsere Kernziele sind das Schaffen einer Möglichkeit eine Übersicht über die Bestände der Kleidung der Jugendfeuerwehren der Gemeinde Helsa zu bekommen. Diese werden aktuell im Ortsteil Eschenstruth gelagert und verwaltet. Dazu soll eine Web-Applikation geschaffen werden, die einen Überblick, sowie die Möglichkeit einer Ein- und Ausgabemaske für die Kleiderverwaltung der freiwilligen Feuerwehr Helsa Ortsteil Eschenstruth bildet. 
-
-Das Projekt soll möglichst barrierefrei (nach aktuellstem europäischem Standard), sowie mobil bedienbar sein, sodass die Jugendwarte nicht auf einen zusätzlichen Laptop angewiesen sind, sondern das Programm einfach und bequem von ihrem Handy oder Smartphone aus bedienen können. Es soll außerdem unter Verwendung der aktuellsten technischen Standards umgesetzt werden.
-
-\textit{Was sind unsere Erfolgskriterien?}
-
-
-
 \subsection{Unternehmen}
 
 Wir sind ein junges Unternehmen bestehend aus drei Studenten der Sozialinformatik. Wir setzen uns zusammen aus zwei Softwareentwicklern (Backend- und Frontendentwickler) und einem Netzwerkadministrator. Das Unternehmen wurde im Jahr 2018 im Zuge eines IT-Projekts für unser Studium gegründet.
@@ -39,22 +29,29 @@ In den folgenden Kapiteln werden die Kernziele dieses Projekts erläutert und di
 
 \textit{Welches Ziel wird damit verfolgt?}
 
-Ziel ist es eine vollständig nachvollziehbare Dokumentation zu ermöglichen, bei dem zu jederzeit der aktuelle Aufenthaltsort der zur Verfügung stehenden Kleidung ermittelt werden kann. Dabei soll ein paralleles Arbeiten möglich sein. Die Anwendung muss auch von mobilen Geräten bedienbar sein, damit nicht nur ein Computer verwendet werden muss. Sie muss zudem intuitiv bedienbar sein. 
+Unsere Kernziele sind das Schaffen einer Möglichkeit eine Übersicht über die Bestände der Kleidung der Jugendfeuerwehren der Gemeinde Helsa zu bekommen. Diese werden aktuell im Ortsteil Eschenstruth gelagert und verwaltet. Dazu soll eine Web-Applikation geschaffen werden, die einen Überblick, sowie die Möglichkeit einer Ein- und Ausgabemaske für die Kleiderverwaltung der freiwilligen Feuerwehr Helsa Ortsteil Eschenstruth bildet. 
+
+Das Projekt soll möglichst barrierefrei (nach aktuellstem europäischem Standard), sowie mobil bedienbar sein, sodass die Jugendwarte nicht auf einen zusätzlichen Laptop angewiesen sind, sondern das Programm einfach und bequem von ihrem Handy oder Smartphone aus bedienen können. Es soll außerdem unter Verwendung der aktuellsten technischen Standards umgesetzt werden.
+
+Ziel ist es eine vollständig nachvollziehbare Dokumentation zu ermöglichen, bei dem zu jederzeit der aktuelle Aufenthaltsort der zur Verfügung stehenden Kleidung ermittelt werden kann. Dabei soll ein paralleles Arbeiten möglich sein. 
 
 \subsubsection{Erfolgskriterien}
 
 \textit{An was werden die Erfolgskriterien festgelegt?}
 
-Ein Erfolgskriterium ist die vollständige Ablösung der Excel"=Tabelle und der Tafel. Die Daten werden nur noch über die Anwendung gepflegt.
+Wir sind sehr darauf bedacht, dass unsere Anwendung performant läuft und jederzeit erreichbar ist. Hierfür ist uns eine gute Server-Infrastruktur wichtig. Dass unsere Applikation performant ist, ist uns wichtig, da es die Akzeptanz unserer Anwender steigern wird, wenn sie nicht lange auf einen Seitenaufbau oder auf das Ausführen einer Aktion warten müssen. 
 
-\textit{Fällt uns nochwas ein? Bitte melden!!}
+Wie legen außerdem gesteigerten Wert darauf, dass die Anwendung mobil nutzbar sein wird. Das soll zum einen ebenfalls die Akzeptanz der Anwender steigern und zum anderen das Anschaffen neuer Hardware verhindern.
+
+Ein weiteres Erfolgskriterium ist die vollständige Ablösung der Excel"=Tabelle und der Tafel. Die Daten werden nur noch über die Anwendung gepflegt.
 
 
 \subsubsection{Kontext des Projektes und die Projektabhängigkeiten}
 
 \textit{In welchem Rahmen findet das Projekt statt?}
 
-Das Projekt findet im Kontext des Studiengangs Sozialinformatik (B.Sc.) der Hochschule Fulda statt.
+Unser Projekt wird im Kontext unseres Studiums der Sozialinformatik umgesetzt. 
+Das Projekt soll für einen öffentlichen, sozialen Träger umgesetzt werden: Die freiwillige Feuerwehr der Gemeinde Helsa, oder spezifisch des Ortsteiles Eschenstruth. Dort sind nur ehrenamtliche Kräfte tätig, die dafür sorgen, dass der Brandschutz in der Gemeinde Helsa und für den neuen Autobahnabschnitt der A44 zwischen Kassel und Hessisch-Lichtenau gewährleistet werden kann. 
 
 \subsubsection{Risiken, die den Projekterfolg verhindern könnten}
 
@@ -87,7 +84,9 @@ Zu den Kunden, sprich die Beteiligten der freiwilligen Feuerwehr Eschenstruth, g
 
 \subsubsection{Zu erwartender Projektansatz}
 
-\textit{Wie wird das Projekt umgesetzt. Beschreibung der Vorgehensweise (agil und so)}
+\textit{Wie wird das Projekt umgesetzt}
+
+Das Projekt wird mit dem agilen Softwareentwicklungsframework "Scrum" umgesetzt. Der Vorteil hierbei ist die Freiheit für die Entwickler, die sich die Arbeit so einteilen können, wie es für sie gerade passend ist. Dabei werden regelmäßig Dailys abgehalten, um die anderen Projektteilnehmer auf den aktuellen Entwicklungsstand zu bringen.
 
 \section{Projektplanung}\label{sec:Projektplanung}
 
