Ein paar Sätze umgestellt, Formatierung, Konfiguration

--- a/ITProjekt/hausarbeit.tex
+++ b/ITProjekt/hausarbeit.tex
@@ -34,9 +34,9 @@
 % diese müssen dann natürlcih in dem Ordner vorliegen
 
 
-\newpage
+%\newpage
 
-\input{src/security.tex}
+%\input{src/security.tex}
 
 \newpage
 
