--- a/ITProjekt/src/konfiguration.tex
+++ b/ITProjekt/src/konfiguration.tex
@@ -6,6 +6,17 @@
 \usepackage{graphicx}
 \usepackage{color}
 
+%Schriftart
+
+\renewcommand*\rmdefault{cmdh}
+\usepackage{lmodern}
+%\usepackage{mathptmx}
+%\usepackage[scaled=.90]{helvet}
+%\usepackage{courier}
+%\usepackage{bera}
+%\usepackage{boisik}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % In diesem Abschnitt gibst du deine persönlichen Daten sowie den Kontext deiner Arbeit an
 % das \xspace am Ende der Einträge muss vorhanden bleiben. Es regelt das Whitespace-
@@ -73,15 +84,6 @@
 \usepackage{prettyref}
 \usepackage{titleref}
 
-%Schriftart
-
-%\renewcommand*\rmdefault{cmdh}
-%\usepackage{lmodern}
-%\usepackage{mathptmx}
-%\usepackage[scaled=.90]{helvet}
-%\usepackage{courier}
-%\usepackage{bera}
-%\usepackage{boisik}
 
 %Inhaltsverzeichnis
 \usepackage[tocgraduated]{tocstyle}
