Layout Fehler korrigiert (kursiv)

--- a/ITProjekt/src/inhalt.tex
+++ b/ITProjekt/src/inhalt.tex
@@ -162,6 +162,4 @@ Kann schon geplant werden, wer für welche Aufgabe zuständig ist? Dann eine Tab
 
 \subsubsection{Zeitplanung}
 
-Hier noch ein Gantt. Aber in Schön... mal sehen wie das mit ZikZ klappt.
-
-http://texdoc.net/texmf-dist/doc/latex/pgfgantt/pgfgantt.pdf
+Hier noch ein Gantt. Als Bild...
