--- a/ITProjekt/src/inhalt.tex
+++ b/ITProjekt/src/inhalt.tex
@@ -135,42 +135,9 @@ Zusätzlich wollen wir in dieser Phase die Infrastruktur, sowie die Software- un
 Als letztes wollen wir ein Projektdefinitionsdokument sowie einen Projektplan erstellen.
 
 In der zweiten Phase von Februar bis März 2019 werden wir für unsere Entwicklungen eine "Defintion of Done", also eine Vereinbarung darüber erstellen, wann wir ein Feature für fertig erachten. Danach beginnen wir mit Entwicklungsintervallen (im Folgenden Sprints genannt) die jeweils eine Woche lang sein werden. An jedem Tag dieser Intervalle werden wir abends ein Meeting (Daily) abhalten, bei dem wir uns auf den aktuellen Stand bringen, was die Entwicklung angeht. Am Ende eines Intervalls werden wir uns die aktuellen Ergebnisse präsentieren und dazu auch die Stakeholder (Verantwortliche der freiwilligen Feuerwehr) einladen. Die Anmerkungen aus diesen Meetings werden wir jeweils in den folgenden Sprint aufnehmen und umsetzen. 
-Währenddessen werden wir  
+Währenddessen werden wir immer wieder unsere Arbeit dokumentieren, damit wir nicht am Ende eine große Dokumentationsphase einleiten müssen. Wir werden außerdem unsere Komponenten mit Tests versehen.
 
-\begin{itemize}
-\item Phase 1 (Aug-Sept 2018)
-  \begin{itemize}
-  \item Get in contact with stakeholders
-  \item Analyse and document requirements (upcoming data / rest-services / security)
-  \item Design frontend/backend architecture and server infrastructure
-  \item Setup project structure with https://start.spring.io/
-  \item Setting up Continious Integration (build/release process). Goal: build and release pipeline. (Jenkins? Nexus? Maven Repo?)
-  \item Project-Init (documents output)
-  \item Project definition document
-  \item Project plan
-  \end{itemize}
-
-\item Phase 2 (Feb-Mar 2019)
-  \begin{itemize}
-  \item Define definition of done (DOD).
-  \item Iterative sprints (1 week) with daylies (10 minutes via Skype)
-  \item Developing backend / frontend. Setup, configure, maintanance database / server.
-  \item Documentation and tests
-  \item Full Agile and so. Tim will know (at least scrum master, haha)
-  \item document output
-  \item project diary
-  \end{itemize}
-
-\item Phase 3 (Aug-Sept 2019)
-  \begin{itemize}
-  \item Same as phase 2 :
-  \end{itemize}
-
-\item Phase 4 (Feb-Mar 2020)
-  \begin{itemize}
-  \item project closure
-  \end{itemize}
-\end{itemize}
+Die dritte Phase von August bis September 2019 wird genauso ablaufen, wie die zweite und in der letzten Phase von Februar bis März 2020 werden wir dann das Projekt schließlich abschließen.  
 
 \subsubsection{Ressourcenplanung}
 
