reverted merge conflicts

--- a/ITProjekt/src/inhalt.tex
+++ b/ITProjekt/src/inhalt.tex
@@ -2,12 +2,10 @@
 
 \subsection{Unternehmen}
 
-Wir sind ein junges Unternehmen bestehend aus drei Studenten der Sozialinformatik. Wir setzen uns zusammen aus zwei Softwareentwicklern (Backend- und Frontendentwickler) und einem Netzwerkadministrator. Das Unternehmen wurde im Jahr 2018 im Zuge eines IT-Projekts für unser Studium gegründet.
+Wir sind ein junges Unternehmen bestehend aus drei Studenten der Sozialinformatik. Wir setzen uns zusammen aus zwei Softwareentwicklern (Backend- und Frontendentwickler) und einem Netzwerkadministrator. Das Unternehmen wurde im Jahr 2018 im Zuge eines IT"=Projekts für unser Studium gegründet.
 
 
 \subsection{Projekt}
-
-\textit{Was ist das für ein Projekt? Was soll es bringen? }
 
 Die freiwillige Feuerwehr von Eschenstruth gibt Feuerwehrkleidung für anliegende Ortsteile an Kinder aus. Dies gestaltet sich zunehmend schwerer, da die aktuelle Bestandspflege und der Überblick über die ausgegebene Kleidung mit den aktuellen Methoden schwer fällt. Vor wenigen Jahren wurden die Ausgabe und Verwaltung der Kleidung noch mit Zetteln dokumentiert. Dabei kam es durch uneinheitliches Vorgehen zu Verlust von Informationen. Dies geschah \zb durch den Verlust eines Zettels. Ein Zettel konnte schnell geschrieben, musste aber auch ordentlich in die entsprechende Akte eingepflegt werden. Zudem musste der Ort der Akte erst aufgesucht werden um das Schriftstück ab zuheften. 
 Aktuell wird eine Excel"=Tabelle gepflegt. Diese befindet sich auf einem lokalen Rechner und einem USB"=Stick zur Datensicherung. Hier besteht der Nachteil, dass ein Rechner, auf dem sich de Excel"=Tabelle befindet, aufgesucht werden muss, um den Kleidereingang oder "=ausgang aus dem Lager zu dokumentieren. Als Zwischenspeicher wird eine Tafel verwendet, die bei der Ausgabe oder Annahme von Kleidung gefüllt wird (s. Abbildung~\ref{fig:tafel}). Der Warenbestand kann dann von einem beliebigen Rechner aus übertragen und dokumentiert werden, unter der Voraussetzung, dass die Person die aktuelle Excel"=Tabelle besitzt. Es muss aber bei der Synchronisation der Dokumentation darauf geachtet werden, dass die Daten in chronologisch richtiger Reihenfolge aufbereitet werden. Das kann unter Umständen, wenn zwei Personen zur gleichen Zeit an der Tabelle gearbeitet haben, zu einem erheblichen Mehraufwand führen, wenn nicht direkt nachvollziehbar ist, wer als letztes die Tabelle gepflegt hat, oder auf welchen Stand sich die Excel"=Tabelle befindet. 
@@ -27,17 +25,13 @@ In den folgenden Kapiteln werden die Kernziele dieses Projekts erläutert und di
 
 \subsubsection{Gegenstand, Kernziele und Ziele des Projektes}
 
-\textit{Welches Ziel wird damit verfolgt?}
-
-Unsere Kernziele sind das Schaffen einer Möglichkeit eine Übersicht über die Bestände der Kleidung der Jugendfeuerwehren der Gemeinde Helsa zu bekommen. Diese werden aktuell im Ortsteil Eschenstruth gelagert und verwaltet. Dazu soll eine Web-Applikation geschaffen werden, die einen Überblick, sowie die Möglichkeit einer Ein- und Ausgabemaske für die Kleiderverwaltung der freiwilligen Feuerwehr Helsa Ortsteil Eschenstruth bildet. 
+Unsere Kernziele sind das Schaffen einer Übersicht über die Bestände der Kleidung der Jugendfeuerwehren der Gemeinde Helsa. Diese werden aktuell im Ortsteil Eschenstruth gelagert und rudimentär verwaltet. Dafür soll eine Web"=Applikation erstellt werden, die den Bestand dokumentiert, die Auf"= und Abgabe von Kleidung der freiwilligen Feuerwehr Helsa Ortsteil Eschenstruth ermöglicht. 
 
 Das Projekt soll möglichst barrierefrei (nach aktuellstem europäischem Standard), sowie mobil bedienbar sein, sodass die Jugendwarte nicht auf einen zusätzlichen Laptop angewiesen sind, sondern das Programm einfach und bequem von ihrem Handy oder Smartphone aus bedienen können. Es soll außerdem unter Verwendung der aktuellsten technischen Standards umgesetzt werden.
 
 Ziel ist es eine vollständig nachvollziehbare Dokumentation zu ermöglichen, bei dem zu jederzeit der aktuelle Aufenthaltsort der zur Verfügung stehenden Kleidung ermittelt werden kann. Dabei soll ein paralleles Arbeiten möglich sein. 
 
 \subsubsection{Erfolgskriterien}
-
-\textit{An was werden die Erfolgskriterien festgelegt?}
 
 Wir sind sehr darauf bedacht, dass unsere Anwendung performant läuft und jederzeit erreichbar ist. Hierfür ist uns eine gute Server-Infrastruktur wichtig. Dass unsere Applikation performant ist, ist uns wichtig, da es die Akzeptanz unserer Anwender steigern wird, wenn sie nicht lange auf einen Seitenaufbau oder auf das Ausführen einer Aktion warten müssen. 
 
@@ -48,14 +42,10 @@ Ein weiteres Erfolgskriterium ist die vollständige Ablösung der Excel"=Tabelle
 
 \subsubsection{Kontext des Projektes und die Projektabhängigkeiten}
 
-\textit{In welchem Rahmen findet das Projekt statt?}
-
 Unser Projekt wird im Kontext unseres Studiums der Sozialinformatik umgesetzt. 
 Das Projekt soll für einen öffentlichen, sozialen Träger umgesetzt werden: Die freiwillige Feuerwehr der Gemeinde Helsa, oder spezifisch des Ortsteiles Eschenstruth. Dort sind nur ehrenamtliche Kräfte tätig, die dafür sorgen, dass der Brandschutz in der Gemeinde Helsa und für den neuen Autobahnabschnitt der A44 zwischen Kassel und Hessisch-Lichtenau gewährleistet werden kann. 
 
 \subsubsection{Risiken, die den Projekterfolg verhindern könnten}
-
-\textit{Was für Risiken können im Verlauf des Projekts auftreten?}
 
 Dadurch, dass das Projekt"=Team Vollzeit tätig ist, kann es zu Engpässen in der Durchführung kommen. Dies kann unter Umständen zu Mehrarbeit auf einzelne Team"=Mitglieder führen. Das Risiko ist gering einzuschätzen, da das Projekt"=Team  hinter der Idee steht.
 
@@ -84,13 +74,13 @@ Zu den Kunden, sprich die Beteiligten der freiwilligen Feuerwehr Eschenstruth, g
 
 \subsubsection{Zu erwartender Projektansatz}
 
-\textit{Wie wird das Projekt umgesetzt}
+\newpage
 
 Das Projekt wird mit dem agilen Softwareentwicklungsframework "Scrum" umgesetzt. Der Vorteil hierbei ist die Freiheit für die Entwickler, die sich die Arbeit so einteilen können, wie es für sie gerade passend ist. Dabei werden regelmäßig Dailys abgehalten, um die anderen Projektteilnehmer auf den aktuellen Entwicklungsstand zu bringen.
 
 \section{Projektplanung}\label{sec:Projektplanung}
 
-Diese Anforderungsspezifikation ist die Aufnahme der Bedürfnisse nach dem ersten Meeting mit den Stakeholdern. Durch die Verwendung von Scrum können wir durch die grobe Beschreibung der Anforderungen unsere Sprints planen und bei der Erstellung der Datenbankstruktur auf die Anforderungen zurück greifen. 
+Diese Anforderungsspezifikation ist die Aufnahme der Bedürfnisse nach dem ersten Meeting mit den Stakeholdern. Durch die Verwendung von \textit{Scrum} können wir durch die grobe Beschreibung der Anforderungen unsere Sprints planen und bei der Erstellung der Datenbankstruktur auf die Anforderungen zurück greifen. 
 
 
 \subsection{Anforderungsspezifikation}
@@ -146,6 +136,4 @@ Kann schon geplant werden, wer für welche Aufgabe zuständig ist? Dann eine Tab
 
 \subsubsection{Zeitplanung}
 
-Hier noch ein Gantt. Aber in Schön... mal sehen wie das mit ZikZ klappt.
-
-http://texdoc.net/texmf-dist/doc/latex/pgfgantt/pgfgantt.pdf
+Hier noch ein Gantt. Als Bild...
