--- a/ITProjekt/src/inhalt.tex
+++ b/ITProjekt/src/inhalt.tex
@@ -118,21 +118,21 @@ Im Abschnitt der \textit{\textbf{Auswertungen}} können die Anwender*innen eine 
 \subsection{Projektplan}
 \subsubsection{Work-Breakdown-Structure}\label{sec:wbs}
 
-\textit{TODO: Verschriftlichen}
-
 Wir unterteilen den Projektablauf in vier Phasen die in den jeweiligen Semestern abgehandelt werden sollen. In Phase 1, die von August bis September 2018 gehen soll, treten wir in Kontakt mit den Verantwortlichen der freiwilligen Feuerwehr Eschenstruth und stellen ihnen die ersten Entwürfe der UI und unseres Konzeptes vor.
 Zusätzlich wollen wir in dieser Phase die Infrastruktur, sowie die Software- und Rest-Architektur planen und erstellen. Wir werden außerdem eine Umgebung für unserer Entwicklung finden und die Projekt Repositories erstellen und pflegen.
 Als letztes wollen wir ein Projektdefinitionsdokument sowie einen Projektplan erstellen.
 
-In der zweiten Phase von Februar bis März 2019 werden wir für unsere Entwicklungen eine "Defintion of Done", also eine Vereinbarung darüber erstellen, wann wir ein Feature für fertig erachten. Danach beginnen wir mit Entwicklungsintervallen (im Folgenden Sprints genannt) die jeweils eine Woche lang sein werden. An jedem Tag dieser Intervalle werden wir abends ein Meeting (Daily) abhalten, bei dem wir uns auf den aktuellen Stand bringen, was die Entwicklung angeht. Am Ende eines Intervalls werden wir uns die aktuellen Ergebnisse präsentieren und dazu auch die Stakeholder (Verantwortliche der freiwilligen Feuerwehr) einladen. Die Anmerkungen aus diesen Meetings werden wir jeweils in den folgenden Sprint aufnehmen und umsetzen. 
-Währenddessen werden wir immer wieder unsere Arbeit dokumentieren, damit wir nicht am Ende eine große Dokumentationsphase einleiten müssen. Wir werden außerdem unsere Komponenten mit Tests versehen.
+In der zweiten Phase von Februar bis März 2019 werden wir für unsere Entwicklungen eine \textit{Defintion of Done} (\textit{DOD}), also eine Vereinbarung darüber erstellen, wann wir ein Feature für fertig erachten. Danach beginnen wir mit Entwicklungsintervallen (im Folgenden \textit{Sprints }genannt) die jeweils eine Woche lang sein werden. An jedem Tag dieser Intervalle werden wir abends ein Meeting (\textit{Daily}) abhalten, bei dem wir uns auf den aktuellen Stand bringen, was die Entwicklung angeht. Am Ende eines \textit{Sprints} werden wir uns die aktuellen Ergebnisse präsentieren und dazu auch die Stakeholder (Verantwortliche der freiwilligen Feuerwehr) einladen. Die Anmerkungen aus diesen Meetings werden wir jeweils in den folgenden \textit{Sprint} aufnehmen, in die Entwicklung einplanen und umsetzen. 
 
-Die dritte Phase von August bis September 2019 wird genauso ablaufen, wie die zweite und in der letzten Phase von Februar bis März 2020 werden wir dann das Projekt schließlich abschließen.  
+Währenddessen werden wir immer wieder unsere Arbeit dokumentieren, damit wir nicht am Ende eine große Dokumentationsphase einleiten müssen. Wir werden außerdem unsere Komponenten mit automatisierten Tests versehen.
+
+Die dritte Phase von August bis September 2019 wird genauso ablaufen, wie die Zweite.
+
+In der letzten Phase von Februar bis März 2020 werden wir dann das Projekt schließlich abschließen.  
 
 \subsubsection{Ressourcenplanung}
 
 Kann schon geplant werden, wer für welche Aufgabe zuständig ist? Dann eine Tabelle mit der Resourcenplanung erstellen.
-
 
 \subsubsection{Zeitplanung}
 
